fixed some spacing issues with theme 11

--- a/sites/all/themes/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/scholar_theme_11/scholar-theme-11.css
@@ -74,11 +74,11 @@ p.copy {
   padding:30px 22px;
   }
 
-#sidebar-left, #header-left {
+#sidebar-left {
   right: 250px;
   }
 
-#content-wrapper, #header-wrapper {
+#content-wrapper {
   padding-left: 230px;
   padding-right: 250px;
   }
@@ -122,8 +122,15 @@ body.no-sidebars #content-wrapper  {
 /* HEADER ELEMENTS */
 
 
-#header .column {
-  padding-top: 23px;
+#header-left {
+  width: 129px;
+  right: 164px;
+  }
+
+#header-wrapper {
+  padding-left: 140px;
+  padding-top: 10px;
+  padding-bottom:5px;
   }
 
 body.header-main #header-wrapper, body.header-main-right #header-wrapper {
@@ -217,11 +224,11 @@ body.header-main #header-main, body.header-main-right #header-main {
   }
 
 #logo img {
-  height: 100px;
+  width: 129px;
   }
 
 #scholar-shield img {
-  height: 52px;
+  height: 59px;
   }
 
 /* MAIN CONTENT AREA */
